fix nav, z-index

--- a/style/homeStyle.css
+++ b/style/homeStyle.css
@@ -26,7 +26,7 @@
   height: 25vw;
   background-color: rgb(200,200,200);
   opacity: 0.5;
-  z-index: 1;
+  z-index: -1;
 }
 
 /*-----------------------------WORK*/
