--- a/style/sharedStyle.css
+++ b/style/sharedStyle.css
@@ -1,8 +1,9 @@
 /*@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR');*/
 
-body, html {
+html, body {
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   /*font-family: Roboto, sans-serif;*/
+  font-size: 1vw;
   margin: 0;
   padding: 0;
   transition: all 0.5s ease;
