--- a/style/workStyle.css
+++ b/style/workStyle.css
@@ -1,7 +1,3 @@
-html, body {
-  font-size: 1vw;
-}
-
 #caida-banner {
   background-color: #BBE8E0;
 }
